--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "spa_mall",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,5 +12,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.3.2"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
